--- a/public/css/app.css
+++ b/public/css/app.css
@@ -812,6 +812,8 @@ Ensure the default browser behavior of the `hidden` attribute.
   line-height: 1.75rem;
 }.leading-tight{
   line-height: 1.25;
+}.leading-relaxed{
+  line-height: 1.625;
 }.tracking-widest{
   letter-spacing: 0.1em;
 }.tracking-wider{
@@ -1136,6 +1138,8 @@ Ensure the default browser behavior of the `hidden` attribute.
   }.md\:text-5xl{
     font-size: 3rem;
     line-height: 1;
+  }.md\:leading-tight{
+    line-height: 1.25;
   }
 }@media (min-width: 1024px){.lg\:px-8{
     padding-left: 2rem;
