--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1078,6 +1078,10 @@ Ensure the default browser behavior of the `hidden` attribute.
     margin-left: auto;
   }.md\:mb-16{
     margin-bottom: 4rem;
+  }.md\:block{
+    display: block;
+  }.md\:hidden{
+    display: none;
   }.md\:w-9\/12{
     width: 75%;
   }.md\:w-7\/12{
@@ -1086,6 +1090,8 @@ Ensure the default browser behavior of the `hidden` attribute.
     width: 25%;
   }.md\:w-1\/2{
     width: 50%;
+  }.md\:w-4\/12{
+    width: 33.333333%;
   }.md\:grid-cols-2{
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }.md\:flex-row{
@@ -1138,6 +1144,9 @@ Ensure the default browser behavior of the `hidden` attribute.
   }.md\:text-5xl{
     font-size: 3rem;
     line-height: 1;
+  }.md\:text-2xl{
+    font-size: 1.5rem;
+    line-height: 2rem;
   }.md\:leading-tight{
     line-height: 1.25;
   }
