--- a/public/css/app.css
+++ b/public/css/app.css
@@ -405,9 +405,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 }.mx-auto{
   margin-left: auto;
   margin-right: auto;
-}.my-10{
-  margin-top: 2.5rem;
-  margin-bottom: 2.5rem;
 }.my-7{
   margin-top: 1.75rem;
   margin-bottom: 1.75rem;
@@ -435,10 +432,12 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-left: 3rem;
 }.-mt-px{
   margin-top: -1px;
-}.ml-auto{
-  margin-left: auto;
+}.ml-0{
+  margin-left: 0px;
 }.mb-4{
   margin-bottom: 1rem;
+}.ml-auto{
+  margin-left: auto;
 }.mb-10{
   margin-bottom: 2.5rem;
 }.mt-7{
@@ -457,14 +456,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-bottom: 5rem;
 }.mt-6{
   margin-top: 1.5rem;
-}.mt-16{
-  margin-top: 4rem;
-}.mb-12{
-  margin-bottom: 3rem;
-}.mb-16{
-  margin-bottom: 4rem;
-}.ml-0{
-  margin-left: 0px;
 }.block{
   display: block;
 }.flex{
@@ -483,6 +474,8 @@ Ensure the default browser behavior of the `hidden` attribute.
   height: 2rem;
 }.h-16{
   height: 4rem;
+}.h-auto{
+  height: auto;
 }.h-10{
   height: 2.5rem;
 }.h-4{
@@ -491,42 +484,34 @@ Ensure the default browser behavior of the `hidden` attribute.
   height: 1.5rem;
 }.h-20{
   height: 5rem;
-}.h-auto{
-  height: auto;
 }.min-h-screen{
   min-height: 100vh;
 }.w-5{
   width: 1.25rem;
 }.w-8\/12{
   width: 66.666667%;
-}.w-8{
-  width: 2rem;
-}.w-auto{
-  width: auto;
 }.w-10\/12{
   width: 83.333333%;
 }.w-full{
   width: 100%;
-}.w-7\/12{
-  width: 58.333333%;
+}.w-8{
+  width: 2rem;
+}.w-auto{
+  width: auto;
 }.w-48{
   width: 12rem;
 }.w-4{
   width: 1rem;
 }.w-6{
   width: 1.5rem;
-}.w-9\/12{
-  width: 75%;
 }.w-3\/12{
   width: 25%;
 }.w-20{
   width: 5rem;
 }.w-4\/12{
   width: 33.333333%;
-}.w-1\/2{
-  width: 50%;
-}.w-5\/12{
-  width: 41.666667%;
+}.w-7\/12{
+  width: 58.333333%;
 }.max-w-6xl{
   max-width: 72rem;
 }.max-w-xl{
@@ -575,10 +560,22 @@ Ensure the default browser behavior of the `hidden` attribute.
   justify-content: center;
 }.justify-between{
   justify-content: space-between;
-}.space-x-12 > :not([hidden]) ~ :not([hidden]){
+}.space-y-5 > :not([hidden]) ~ :not([hidden]){
+  --tw-space-y-reverse: 0;
+  margin-top: calc(1.25rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(1.25rem * var(--tw-space-y-reverse));
+}.space-x-0 > :not([hidden]) ~ :not([hidden]){
   --tw-space-x-reverse: 0;
-  margin-right: calc(3rem * var(--tw-space-x-reverse));
-  margin-left: calc(3rem * calc(1 - var(--tw-space-x-reverse)));
+  margin-right: calc(0px * var(--tw-space-x-reverse));
+  margin-left: calc(0px * calc(1 - var(--tw-space-x-reverse)));
+}.space-x-5 > :not([hidden]) ~ :not([hidden]){
+  --tw-space-x-reverse: 0;
+  margin-right: calc(1.25rem * var(--tw-space-x-reverse));
+  margin-left: calc(1.25rem * calc(1 - var(--tw-space-x-reverse)));
+}.space-y-10 > :not([hidden]) ~ :not([hidden]){
+  --tw-space-y-reverse: 0;
+  margin-top: calc(2.5rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(2.5rem * var(--tw-space-y-reverse));
 }.space-x-8 > :not([hidden]) ~ :not([hidden]){
   --tw-space-x-reverse: 0;
   margin-right: calc(2rem * var(--tw-space-x-reverse));
@@ -591,34 +588,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-space-x-reverse: 0;
   margin-right: calc(4rem * var(--tw-space-x-reverse));
   margin-left: calc(4rem * calc(1 - var(--tw-space-x-reverse)));
-}.space-x-24 > :not([hidden]) ~ :not([hidden]){
+}.space-x-10 > :not([hidden]) ~ :not([hidden]){
   --tw-space-x-reverse: 0;
-  margin-right: calc(6rem * var(--tw-space-x-reverse));
-  margin-left: calc(6rem * calc(1 - var(--tw-space-x-reverse)));
-}.space-x-20 > :not([hidden]) ~ :not([hidden]){
-  --tw-space-x-reverse: 0;
-  margin-right: calc(5rem * var(--tw-space-x-reverse));
-  margin-left: calc(5rem * calc(1 - var(--tw-space-x-reverse)));
-}.space-x-32 > :not([hidden]) ~ :not([hidden]){
-  --tw-space-x-reverse: 0;
-  margin-right: calc(8rem * var(--tw-space-x-reverse));
-  margin-left: calc(8rem * calc(1 - var(--tw-space-x-reverse)));
-}.space-x-5 > :not([hidden]) ~ :not([hidden]){
-  --tw-space-x-reverse: 0;
-  margin-right: calc(1.25rem * var(--tw-space-x-reverse));
-  margin-left: calc(1.25rem * calc(1 - var(--tw-space-x-reverse)));
-}.space-y-10 > :not([hidden]) ~ :not([hidden]){
-  --tw-space-y-reverse: 0;
-  margin-top: calc(2.5rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(2.5rem * var(--tw-space-y-reverse));
-}.space-y-5 > :not([hidden]) ~ :not([hidden]){
-  --tw-space-y-reverse: 0;
-  margin-top: calc(1.25rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(1.25rem * var(--tw-space-y-reverse));
-}.space-x-0 > :not([hidden]) ~ :not([hidden]){
-  --tw-space-x-reverse: 0;
-  margin-right: calc(0px * var(--tw-space-x-reverse));
-  margin-left: calc(0px * calc(1 - var(--tw-space-x-reverse)));
+  margin-right: calc(2.5rem * var(--tw-space-x-reverse));
+  margin-left: calc(2.5rem * calc(1 - var(--tw-space-x-reverse)));
 }.overflow-hidden{
   overflow: hidden;
 }.rounded-md{
@@ -633,6 +606,8 @@ Ensure the default browser behavior of the `hidden` attribute.
   border-bottom-right-radius: 0.375rem;
 }.border{
   border-width: 1px;
+}.border-t-2{
+  border-top-width: 2px;
 }.border-t{
   border-top-width: 1px;
 }.border-r{
@@ -643,17 +618,15 @@ Ensure the default browser behavior of the `hidden` attribute.
   border-bottom-width: 1px;
 }.border-l-4{
   border-left-width: 4px;
-}.border-t-2{
-  border-top-width: 2px;
 }.border-gray-300{
   --tw-border-opacity: 1;
   border-color: rgb(209 213 219 / var(--tw-border-opacity));
-}.border-gray-200{
-  --tw-border-opacity: 1;
-  border-color: rgb(229 231 235 / var(--tw-border-opacity));
 }.border-secondary{
   --tw-border-opacity: 1;
   border-color: rgb(28 52 91 / var(--tw-border-opacity));
+}.border-gray-200{
+  --tw-border-opacity: 1;
+  border-color: rgb(229 231 235 / var(--tw-border-opacity));
 }.border-transparent{
   border-color: transparent;
 }.border-gray-400{
@@ -674,18 +647,18 @@ Ensure the default browser behavior of the `hidden` attribute.
 }.bg-gray-300{
   --tw-bg-opacity: 1;
   background-color: rgb(209 213 219 / var(--tw-bg-opacity));
-}.bg-primary{
+}.bg-gray-200{
   --tw-bg-opacity: 1;
-  background-color: rgb(255 155 67 / var(--tw-bg-opacity));
+  background-color: rgb(229 231 235 / var(--tw-bg-opacity));
 }.bg-secondary{
   --tw-bg-opacity: 1;
   background-color: rgb(28 52 91 / var(--tw-bg-opacity));
 }.bg-indigo-50{
   --tw-bg-opacity: 1;
   background-color: rgb(238 242 255 / var(--tw-bg-opacity));
-}.bg-gray-200{
+}.bg-red-500{
   --tw-bg-opacity: 1;
-  background-color: rgb(229 231 235 / var(--tw-bg-opacity));
+  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
 }.fill-current{
   fill: currentColor;
 }.p-6{
@@ -701,44 +674,39 @@ Ensure the default browser behavior of the `hidden` attribute.
 }.px-2{
   padding-left: 0.5rem;
   padding-right: 0.5rem;
+}.py-10{
+  padding-top: 2.5rem;
+  padding-bottom: 2.5rem;
 }.py-4{
   padding-top: 1rem;
   padding-bottom: 1rem;
 }.px-6{
   padding-left: 1.5rem;
   padding-right: 1.5rem;
-}.py-16{
-  padding-top: 4rem;
-  padding-bottom: 4rem;
 }.py-12{
   padding-top: 3rem;
   padding-bottom: 3rem;
 }.py-1{
   padding-top: 0.25rem;
   padding-bottom: 0.25rem;
-}.py-20{
-  padding-top: 5rem;
-  padding-bottom: 5rem;
+}.py-7{
+  padding-top: 1.75rem;
+  padding-bottom: 1.75rem;
+}.py-16{
+  padding-top: 4rem;
+  padding-bottom: 4rem;
 }.py-6{
   padding-top: 1.5rem;
   padding-bottom: 1.5rem;
 }.px-1{
   padding-left: 0.25rem;
   padding-right: 0.25rem;
-}.py-24{
-  padding-top: 6rem;
-  padding-bottom: 6rem;
-}.py-10{
-  padding-top: 2.5rem;
-  padding-bottom: 2.5rem;
-}.py-7{
-  padding-top: 1.75rem;
-  padding-bottom: 1.75rem;
-}.py-0{
-  padding-top: 0px;
-  padding-bottom: 0px;
 }.pt-8{
   padding-top: 2rem;
+}.pt-12{
+  padding-top: 3rem;
+}.pb-0{
+  padding-bottom: 0px;
 }.pl-3{
   padding-left: 0.75rem;
 }.pr-4{
@@ -755,10 +723,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   padding-top: 1.5rem;
 }.pt-1{
   padding-top: 0.25rem;
-}.pt-12{
-  padding-top: 3rem;
-}.pb-0{
-  padding-bottom: 0px;
 }.text-left{
   text-align: left;
 }.text-center{
@@ -771,33 +735,24 @@ Ensure the default browser behavior of the `hidden` attribute.
 }.text-2xl{
   font-size: 1.5rem;
   line-height: 2rem;
-}.text-lg{
-  font-size: 1.125rem;
-  line-height: 1.75rem;
-}.text-3xl{
-  font-size: 1.875rem;
-  line-height: 2.25rem;
 }.text-xl{
   font-size: 1.25rem;
   line-height: 1.75rem;
-}.text-xs{
-  font-size: 0.75rem;
-  line-height: 1rem;
-}.text-6xl{
-  font-size: 3.75rem;
-  line-height: 1;
+}.text-lg{
+  font-size: 1.125rem;
+  line-height: 1.75rem;
 }.text-base{
   font-size: 1rem;
   line-height: 1.5rem;
-}.text-8xl{
-  font-size: 6rem;
+}.text-xs{
+  font-size: 0.75rem;
+  line-height: 1rem;
+}.text-3xl{
+  font-size: 1.875rem;
+  line-height: 2.25rem;
+}.text-6xl{
+  font-size: 3.75rem;
   line-height: 1;
-}.text-5xl{
-  font-size: 3rem;
-  line-height: 1;
-}.text-4xl{
-  font-size: 2.25rem;
-  line-height: 2.5rem;
 }.font-medium{
   font-weight: 500;
 }.font-bold{
@@ -848,6 +803,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 }.text-gray-800{
   --tw-text-opacity: 1;
   color: rgb(31 41 55 / var(--tw-text-opacity));
+}.text-red-800{
+  --tw-text-opacity: 1;
+  color: rgb(153 27 27 / var(--tw-text-opacity));
 }.text-indigo-700{
   --tw-text-opacity: 1;
   color: rgb(67 56 202 / var(--tw-text-opacity));
@@ -875,13 +833,13 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}.shadow-lg{
-  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }.shadow-xl{
   --tw-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color), 0 8px 10px -6px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}.shadow-lg{
+  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }.shadow-md{
   --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
@@ -955,15 +913,15 @@ Ensure the default browser behavior of the `hidden` attribute.
 }.focus\:border-blue-300:focus{
   --tw-border-opacity: 1;
   border-color: rgb(147 197 253 / var(--tw-border-opacity));
+}.focus\:border-gray-300:focus{
+  --tw-border-opacity: 1;
+  border-color: rgb(209 213 219 / var(--tw-border-opacity));
 }.focus\:border-secondary:focus{
   --tw-border-opacity: 1;
   border-color: rgb(28 52 91 / var(--tw-border-opacity));
 }.focus\:border-indigo-700:focus{
   --tw-border-opacity: 1;
   border-color: rgb(67 56 202 / var(--tw-border-opacity));
-}.focus\:border-gray-300:focus{
-  --tw-border-opacity: 1;
-  border-color: rgb(209 213 219 / var(--tw-border-opacity));
 }.focus\:bg-indigo-100:focus{
   --tw-bg-opacity: 1;
   background-color: rgb(224 231 255 / var(--tw-bg-opacity));
@@ -992,12 +950,12 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
   --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(3px + var(--tw-ring-offset-width)) var(--tw-ring-color);
   box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
-}.focus\:ring-secondary:focus{
-  --tw-ring-opacity: 1;
-  --tw-ring-color: rgb(28 52 91 / var(--tw-ring-opacity));
 }.focus\:ring-gray-300:focus{
   --tw-ring-opacity: 1;
   --tw-ring-color: rgb(209 213 219 / var(--tw-ring-opacity));
+}.focus\:ring-secondary:focus{
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(28 52 91 / var(--tw-ring-opacity));
 }.focus\:ring-opacity-50:focus{
   --tw-ring-opacity: 0.5;
 }.active\:bg-gray-100:active{
@@ -1082,16 +1040,16 @@ Ensure the default browser behavior of the `hidden` attribute.
     display: block;
   }.md\:hidden{
     display: none;
-  }.md\:w-9\/12{
-    width: 75%;
   }.md\:w-7\/12{
     width: 58.333333%;
   }.md\:w-3\/12{
     width: 25%;
-  }.md\:w-1\/2{
-    width: 50%;
   }.md\:w-4\/12{
     width: 33.333333%;
+  }.md\:w-9\/12{
+    width: 75%;
+  }.md\:w-1\/2{
+    width: 50%;
   }.md\:grid-cols-2{
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }.md\:flex-row{
@@ -1100,10 +1058,6 @@ Ensure the default browser behavior of the `hidden` attribute.
     align-items: flex-start;
   }.md\:items-center{
     align-items: center;
-  }.md\:space-x-12 > :not([hidden]) ~ :not([hidden]){
-    --tw-space-x-reverse: 0;
-    margin-right: calc(3rem * var(--tw-space-x-reverse));
-    margin-left: calc(3rem * calc(1 - var(--tw-space-x-reverse)));
   }.md\:space-y-0 > :not([hidden]) ~ :not([hidden]){
     --tw-space-y-reverse: 0;
     margin-top: calc(0px * calc(1 - var(--tw-space-y-reverse)));
@@ -1112,6 +1066,10 @@ Ensure the default browser behavior of the `hidden` attribute.
     --tw-space-x-reverse: 0;
     margin-right: calc(4rem * var(--tw-space-x-reverse));
     margin-left: calc(4rem * calc(1 - var(--tw-space-x-reverse)));
+  }.md\:space-x-12 > :not([hidden]) ~ :not([hidden]){
+    --tw-space-x-reverse: 0;
+    margin-right: calc(3rem * var(--tw-space-x-reverse));
+    margin-left: calc(3rem * calc(1 - var(--tw-space-x-reverse)));
   }.md\:space-x-24 > :not([hidden]) ~ :not([hidden]){
     --tw-space-x-reverse: 0;
     margin-right: calc(6rem * var(--tw-space-x-reverse));
@@ -1120,12 +1078,12 @@ Ensure the default browser behavior of the `hidden` attribute.
     border-top-width: 0px;
   }.md\:border-l{
     border-left-width: 1px;
-  }.md\:py-16{
-    padding-top: 4rem;
-    padding-bottom: 4rem;
   }.md\:py-20{
     padding-top: 5rem;
     padding-bottom: 5rem;
+  }.md\:py-16{
+    padding-top: 4rem;
+    padding-bottom: 4rem;
   }.md\:py-12{
     padding-top: 3rem;
     padding-bottom: 3rem;
@@ -1135,18 +1093,18 @@ Ensure the default browser behavior of the `hidden` attribute.
   }.md\:text-xl{
     font-size: 1.25rem;
     line-height: 1.75rem;
-  }.md\:text-8xl{
-    font-size: 6rem;
-    line-height: 1;
   }.md\:text-6xl{
     font-size: 3.75rem;
-    line-height: 1;
-  }.md\:text-5xl{
-    font-size: 3rem;
     line-height: 1;
   }.md\:text-2xl{
     font-size: 1.5rem;
     line-height: 2rem;
+  }.md\:text-8xl{
+    font-size: 6rem;
+    line-height: 1;
+  }.md\:text-5xl{
+    font-size: 3rem;
+    line-height: 1;
   }.md\:leading-tight{
     line-height: 1.25;
   }
